--- a/src/app/section/customers/customers.component.html
+++ b/src/app/section/customers/customers.component.html
@@ -1,1 +1,8 @@
-<p>customers works!</p>
+<div class="row">
+    <div class="col-md-12">
+        <app-staychill 
+        [summary_data_table_req]="mainData" 
+        >
+    </app-staychill>
+    </div>
+</div>
