--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,6 +1,7 @@
 <div class="row">
     <div class="col-md-12">
-        <app-staychill></app-staychill>
+        <!-- <app-staychill></app-staychill> -->
+        <h2>staychillcomponent use to be there</h2>
     </div>
 
     <div class="col-md">
