--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,221 +1,49 @@
 <div class="row">
     <div class="col-md-12">
-        <!-- <app-staychill></app-staychill> -->
-        <h2>staychillcomponent use to be there</h2>
-    </div>
 
-    <div class="col-md">
-        <div class="card">
-            <div class="card-body">
-                <h4 class="card-title"><span class="lstick"></span>Visit Separation</h4>
-                <div style="height: 220px">
-                    <canvas baseChart height="100px" [data]="doughnutChartData" [labels]="doughnutChartLabels"
-                        [options]="doughnutChartOptions" [legend]="doughnutChartLegend" [chartType]="doughnutChartType"
-                        [colors]="[{backgroundColor: ['rgb(236, 239, 241)', 'rgb(116, 90, 242)', 'rgb(38, 198, 218)', 'rgb(30, 136, 229)']}]">
-                    </canvas>
-                </div>
-                <table class="table vm font-14">
-                    <tr>
-                        <td class="b-0">Mobile</td>
-                        <td class="text-right font-medium b-0">38.5%</td>
-                    </tr>
-                    <tr>
-                        <td>Tablet</td>
-                        <td class="text-right font-medium">30.8%</td>
-                    </tr>
-                </table>
-            </div>
-        </div>
-    </div>
-    <div class="col-md-6">
-        <div class="card">
-            <div class="card-body">
-                <h4 class="card-title"><span class="lstick"></span>Projects of the Month</h4>
-                <div class="table-responsive">
-                    <table class="table vm no-th-brd pro-of-month mb-0 v-middle">
-                        <thead>
-                            <tr>
-                                <th colspan="2">Assigned</th>
-                                <th>Name</th>
-                                <th>Priority</th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            <tr>
-                                <td style="width:50px;"><span class="round"><img src="assets/images/users/1.jpg"
-                                            alt="user" width="50"></span></td>
-                                <td>
-                                    <h6 class="mb-0">Sunil Joshi</h6><small class="text-muted">Web Designer</small>
-                                </td>
-                                <td>Elite Admin</td>
-                                <td>Low</td>
-                            </tr>
-                            <tr class="active">
-                                <td><span class="round"><img src="assets/images/users/2.jpg" alt="user"
-                                            width="50"></span></td>
-                                <td>
-                                    <h6 class="mb-0">Andrew</h6><small class="text-muted">Project Manager</small>
-                                </td>
-                                <td>Real Homes</td>
-                                <td>Medium</td>
-                            </tr>
-                            <tr>
-                                <td><span class="round round-success"><img src="assets/images/users/3.jpg" alt="user"
-                                            width="50"></span></td>
-                                <td>
-                                    <h6 class="mb-0">Bhavesh patel</h6><small class="text-muted">Developer</small>
-                                </td>
-                                <td>MedicalPro Theme</td>
-                                <td>High</td>
-                            </tr>
-                            <tr>
-                                <td><span class="round round-primary"><img src="assets/images/users/4.jpg" alt="user"
-                                            width="50"></span></td>
-                                <td>
-                                    <h6 class="mb-0">Nirav Joshi</h6><small class="text-muted">Frontend Eng</small>
-                                </td>
-                                <td>Elite Admin</td>
-                                <td>Low</td>
-                            </tr>
-                            <tr>
-                                <td><span class="round round-warning"><img src="assets/images/users/5.jpg" alt="user"
-                                            width="50"></span></td>
-                                <td>
-                                    <h6 class="mb-0">Micheal Doe</h6><small class="text-muted">Content Writer</small>
-                                </td>
-                                <td>Helping Hands</td>
-                                <td>High</td>
-                            </tr>
-                            <tr>
-                                <td><span class="round round-danger"><img src="assets/images/users/6.jpg" alt="user"
-                                            width="50"></span></td>
-                                <td>
-                                    <h6 class="mb-0">Johnathan</h6><small class="text-muted">Graphic</small>
-                                </td>
-                                <td>Digital Agency</td>
-                                <td>High</td>
-                            </tr>
-                        </tbody>
-                    </table>
-                </div>
-            </div>
-        </div>
-
-    </div>
-    <div class="col-md-6">
-        <div class="card">
-            <div class="card-body">
-                <div class="d-flex">
-                    <h4 class="card-title"><span class="lstick"></span>My Contact</h4>
-                </div>
-                <div class="message-box contact-box">
-                    <div class="message-widget contact-widget">
-                        <!-- Message -->
-                        <a href="#">
-                            <div class="user-img"> <img src="assets/images/users/1.jpg" alt="user"
-                                    class="img-circle"> <span class="profile-status online pull-right"></span> </div>
-                            <div class="mail-contnet">
-                                <h5>Pavan kumar</h5> <span class="mail-desc">info@wrappixel.com</span>
-                            </div>
-                        </a>
-                        <!-- Message -->
-                        <a href="#">
-                            <div class="user-img"> <img src="assets/images/users/2.jpg" alt="user"
-                                    class="img-circle"> <span class="profile-status busy pull-right"></span> </div>
-                            <div class="mail-contnet">
-                                <h5>Sonu Nigam</h5> <span class="mail-desc">pamela1987@gmail.com</span>
-                            </div>
-                        </a>
-                        <!-- Message -->
-                        <a href="#">
-                            <div class="user-img"> <span class="round">A</span> <span
-                                    class="profile-status away pull-right"></span> </div>
-                            <div class="mail-contnet">
-                                <h5>Arijit Sinh</h5> <span class="mail-desc">cruise1298.fiplip@gmail.com</span>
-                            </div>
-                        </a>
-                        <!-- Message -->
-                        <a href="#">
-                            <div class="user-img"> <img src="assets/images/users/4.jpg" alt="user"
-                                    class="img-circle"> <span class="profile-status offline pull-right"></span> </div>
-                            <div class="mail-contnet">
-                                <h5>Pavan kumar</h5> <span class="mail-desc">kat@gmail.com</span>
-                            </div>
-                        </a>
-                        <!-- Message -->
-                        <a href="#">
-                            <div class="user-img"> <img src="assets/images/users/5.jpg" alt="user"
-                                    class="img-circle"> <span class="profile-status offline pull-right"></span> </div>
-                            <div class="mail-contnet">
-                                <h5>Andrew</h5> <span class="mail-desc">and@gmail.com</span>
-                            </div>
-                        </a>
-                        <!-- Message -->
-                        <a href="#">
-                            <div class="user-img"> <img src="assets/images/users/6.jpg" alt="user"
-                                    class="img-circle"> <span class="profile-status offline pull-right"></span> </div>
-                            <div class="mail-contnet">
-                                <h5>Jonathan Jones</h5> <span class="mail-desc">jj@gmail.com</span>
-                            </div>
-                        </a>
-
+        <div class="row">
+            <div class="col-lg-4 col-md-4">
+                <div class="card">
+                    <img class="card-img-top img img-responsive border-dark border-right border-left border-top" src="assets/images/clients2.png" alt="Card image cap">
+                    <div class="card-body border-left border-right border-dark">
+                        <p class="card-text">Visionner et gérer les informations client !</p>
+                        <!-- <a href="#" class="btn btn-primary">Go somewhere</a> -->
                     </div>
+                    <div class="card-footer btn btn-dark bg-dark" (click)="this.router.navigate(['section/customers'])">
+                        CLIENTS
+                      </div>
                 </div>
             </div>
-        </div>
-    </div>
-    <div class="col-md-4">
-        <div class="card">
-            <img class="card-img-top img-responsive" src="assets/images/big/img1.jpg" alt="Card image cap">
-            <div class="card-body">
-                <h3 class="font-normal">Business development of rules 2017</h3>
-                <span class="label label-info label-rounded">Technology</span>
-                <p class="m-b-0 m-t-20">Titudin venenatis ipsum aciat. Vestibulum ullamcorper quam. nenatis ipsum ac
-                    feugiat.
-                    Ibulum ullamcorper</p>
-                <div class="d-flex m-t-20">
-                    <button class="btn p-l-0 btn-link ">Read more</button>
-                    <div class="ml-auto align-self-center">
-                        <a href="javascript:void(0)" class="link m-r-10"><i class="fa fa-heart-o"></i></a>
-                        <a href="javascript:void(0)" class="link m-r-10"><i class="fa fa-share-alt"></i></a>
+            <div class="col-lg-4 col-md-4">
+                <div class="card">
+                    <img class="card-img-top img-responsive border-dark border-right border-left border-top" src="assets/images/commands.png" alt="Card image cap">
+                    <div class="card-body border-left border-right border-dark">
+                        <p class="card-text">Gérer le suivi et les informations concernant les commandes !</p>
+                        <!-- <a href="#" class="btn btn-primary">Go somewhere</a> -->
                     </div>
+                    <div class="card-footer btn btn-dark bg-dark" (click)="this.router.navigate(['section/orders'])">
+                        COMMANDES
+                      </div>
+                </div>
+            </div>
+            <div class="col-lg-4 col-md-4">
+                <div class="card">
+                    <img class="card-img-top img-responsive border-dark border-right border-left border-top" src="assets/images/farmMan3.png" alt="Card image cap">
+                    <div class="card-body border-left border-right border-dark">
+                        <p class="card-text">Visionner les producteurs et leurs produit !</p>
+                        <!-- <a href="#" class="btn btn-primary">Go somewhere</a> -->
+                    </div>
+                    <div class="card-footer btn btn-dark bg-dark" (click)="this.router.navigate(['section/producers'])">
+                        PRODUCTEURS
+                      </div>
                 </div>
             </div>
         </div>
     </div>
-    <div class="col-md-8">
-        <div class="card">
-            <div class="card-body">
-                <div class="d-flex">
-                    <h4 class="card-title"><span class="lstick"></span>Website Visit</h4>
-                    <ul class="list-inline m-b-0 ml-auto">
-                        <li>
-                            <h6 class="text-muted text-success"><i class="fa fa-circle font-10 m-r-10 "></i>Site A view
-                            </h6>
-                        </li>
-                        <li>
-                            <h6 class="text-muted text-info"><i class="fa fa-circle font-10 m-r-10"></i>Site B view</h6>
-                        </li>
-                    </ul>
-                </div>
-                <div style="height:350px;" class="mt-4 pt-4">
-                    <canvas baseChart [datasets]="lineChartData" [labels]="lineChartLabels" [options]="lineChartOptions"
-                        [colors]="lineChartColors" [legend]="lineChartLegend" [chartType]="lineChartType"> </canvas>
-                </div>
-            </div>
-        </div>
-    </div>
+
+
     <br><br>
-    <!-- <h1>insert table component once ended</h1> -->
-    <!-- <h1>insert table component once ended</h1>
-    <br>
-    <div class="col-md-12">
-        <app-staychill></app-staychill>
-    </div>
-    <hr><hr> -->
-    <!-- <div class="col-md-12">
-        <data-table></data-table>
-    </div> -->
+
 
     <hr><br>
 
