dashboard css change

--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -45,7 +45,7 @@
     <br><br>
 
 
-    <hr><br>
+    <!-- <hr><br>
 
     <h1>Insert line chart below </h1>
     
@@ -72,7 +72,7 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div> -->
 
 
 
